--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>MyCelium</title>
-    <link rel="stylesheet" href="./client/styles/main.css" />
+    <link rel="stylesheet" href="./src/styles.css" />
   </head>
   <body>
     <div id="app"></div>
-    <script src="./client/index.tsx" type="module"></script>
+    <script src="./src/index.tsx" type="module"></script>
   </body>
 </html>
